--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 			</section>
 
 
-			<section data-background="images/spiegel-zuwanderung1.jpg">				
+			<section data-background="images/spiegel-zuwanderung1.jpg">	
+				<br><br>
+				<p style="text-align:center; line-height: 1.3; font-size:40px"><font color="black">Zuwanderung in den Schlagzeilen<br> (Der Spiegel, 14. März 2015)<br> Aber was bedeutet ein Wanderungsgewinn von 400.000 im globalen Kontext?</font></p>			
 			</section>
 			
 			<section>
