--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
+		<!-- If the query includes '?print-pdf', include the PDF print sheet -->
 		<script>
 			if( window.location.search.match( /print-pdf/gi ) ) {
 				var link = document.createElement( 'link' );
@@ -55,7 +55,8 @@
 		<div class="slides">
 
 		<!-- SLIDES -->		
-
+		<!-- to print to pdf, open in Chrome and add ?print-pdf to url -->
+		
 			<section>
 				<h2>Quantifizierung, Visualisierung und Kommunikation von <br>globalen Wanderungsströmen</h2>
 				<h3>Nikola Sander</h3>
@@ -65,11 +66,21 @@
 				<h4>Slides: <a href="http://www.nikolasander.com/igu2014" target="_blank">nikolasander.com/dgd2015</a></h4>
 			</section>
 
-
-			<section data-background="images/spiegel-zuwanderung1.jpg">	
+			<section data-background="images/spiegel-zuwanderung.jpg" data-background-size="contain">	
 				<br><br>
-				<p style="text-align:center; line-height: 1.3; font-size:40px"><font color="black">Zuwanderung in den Schlagzeilen<br> (Der Spiegel, 14. März 2015)<br> Aber was bedeutet ein Wanderungsgewinn von 400.000 im globalen Kontext?</font></p>			
+				<p style="background-color: rgba(255, 255, 255, 0.5); text-align:center; line-height: 1.3; font-size:40px"><font color="black">Zuwanderung in den Schlagzeilen</font></p>			
+			</section>	
+	
+			<section data-background="images/boat_italian_navy.jpeg" data-background-size="contain">				
+				<h2 style="background-color: rgba(0, 0, 0, 0.5)"><font color="white">Wie hoch ist der Anteil der Weltbevölkerung der zwischen 2005 und 2010 in ein anderes Land migriert ist?</font></h2>
 			</section>
+			
+			<section>
+				<h2><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank"> Quantifying Global International Migration Flows</a></h2>
+				<p>Guy Abel & Nikola Sander.<br>Veröffentlicht in <i>Science</i> am 28. März 2014; Vol 343: 1520-1522.</p> 
+				<br>
+				<img src="images/science.png"  width="300">
+			</section>			
 			
 			<section>
 				<h2>Bezifferung globaler Migrationsströme</h2>
@@ -85,18 +96,7 @@
 				<p>Geburtsland wird in Völkszählungen und Registern erfasst.</p>
 				<p>UNO hat 2013 einen globalen, bilateralen Datensatz veröffentlicht.</p>
 				<p>Aber: akkumulative Werte die keine akutellen Wanderungstrends abbilden.</p>
-			</section>					
-	
-			<section data-background="images/boat_italian_navy.jpeg">				
-				<h2 style="background-color: rgba(0, 0, 0, 0.4)"><font color="white">Wie hoch ist der Anteil der Weltbevölkerung der zwischen 2005 und 2010 in ein anderes Land migriert ist?</font></h2>
-			</section>
-			
-			<section>
-				<h2><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank"> Quantifying Global International Migration Flows</a></h2>
-				<p>Guy Abel & Nikola Sander.<br>Veröffentlicht in <i>Science</i> am 28. März 2014; Vol 343: 1520-1522.</p> 
-				<br>
-				<img src="images/science.png"  width="300">
-			</section>			
+			</section>							
 			
 			<section>
 				<h2>Neues Modell für die Berechnung von Migrationsströmen</h2>
@@ -150,22 +150,22 @@
 				<img src="images/global-intensity.png"  width="700">
 			</section>
 			
-			<section data-background="images/flowmap-adam.jpg">	
-				<br><br><br><br>
+			<section data-background="images/flowmap-adam.jpg" data-background-size="contain">	
+				<br><br><br><br><br><br><br><br>
 				<p style="text-align:center"><font color="black">Klassische Visualisierung von Migrationsströmen</font></p>
 			</section>
 			
-			<section data-background="images/Science_Fig4_1.jpg">	
-				<br><br>
+			<section data-background="images/Science_Fig4_1.jpg" data-background-size="contain">	
+				<br><br><br><br><br><br>
 				<p style="text-align:center; line-height: 1.3; font-size:40px"><font color="black">Circular Migration Plot</font></p>
 			</section>
 			
-			<section data-background="images/circular1.png">	
+			<section data-background="images/circular1.png" data-background-size="contain">	
 				<br><br><br>
 				<p style="text-align:center"><font color="white">Wanderungen zwischen 60 Ländern<br> über den Zeitraum 2005-10</font></p>
 			</section>
 			
-			<section data-background="images/text-tabelle.jpg">		
+			<section data-background="images/text-tabelle.jpg" data-background-size="contain">		
 			<h2>Wissenschaftskommunikation gewinnt an Bedeutung</h2>
 				<blockquote style="line-height: 1.3; font-size:44px">
 				“Scientists must learn to communicate with the public, be willing to do so and indeed consider it their duty to do so.”
@@ -173,22 +173,22 @@
 				<p style="text-align:right">Royal Society, 1985</p>
 			</section>
 			
-			<section data-background="images/demogr-datasheet1.png">	
+			<section data-background="images/demogr-datasheet1.png" data-background-size="contain">	
 			</section>
 			
-			<section data-background="images/datasheets_both.png">	
+			<section data-background="images/datasheets_both.png" data-background-size="contain">	
 			</section>		
 
 			
-			<section data-background="images/circular-world.png">	
+			<section data-background="images/circular-world.png" data-background-size="contain">	
 			<h2 style="text-align:center; color:#F4EBCE;background-color: rgba(0, 0, 0, 0.5)"><a href="http://www.global-migration.info" target="_blank">"The Global Flow of People"</a></h2>
 			<p style="text-align:center">Programmierung (d3.js) von Null2 Berlin</p>
 			</section>
 			
-			<section data-background="images/global-migration.png">
+			<section data-background="images/global-migration.png" data-background-size="contain">
 			</section>			
 			
-			<!-- Interactive -->
+			<!-- Interactive 
 			<section style="width:800px">			
 			<div>
 					<nav role=navigation>
@@ -257,17 +257,15 @@
 					})();
 				  </script>
 			</section>			
-	
+	-->
 
 			<section>
 			<h2>Starkes Medieninteresse und positives Feedback über soziale Netzwerke</h2>
-			<blockquote class="twitter-tweet" width="520" align="center" data-conversation="none" data-cards="hidden"><p>Fantastic visualization of global migration data. I'm on there if you zoom in a lot.<br><br> <a href="http://t.co/VeAUPXNrd6">http://t.co/VeAUPXNrd6</a></p>&mdash; Pumphrey&#39;s Math (@PumphreysMath) <a href="https://twitter.com/PumphreysMath/statuses/451694063184408577">April 3, 2014</a></blockquote>
-				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<blockquote style="font-size:40px; line-height: 1.5">Fantastic visualization of global migration data. I'm on there if you zoom in a lot.</blockquote>
 			</section>
 
 			<section>
-				<blockquote class="twitter-tweet" width="520" align="center" data-conversation="none" data-cards="hidden"><p><a>#SomeoneTellMarineLePen</a> African migrants aren't invading us, and here's the data to prove it <br><br><a href="http://t.co/njcn66Xsjg">http://t.co/njcn66Xsjg</a> <a href="http://t.co/Ug4hTcl8V0">pic.twitter.com/Ug4hTcl8V0</a></p>&mdash; Jacques (@jacksometer) <a href="https://twitter.com/jacksometer/statuses/450603653158957057">March 31, 2014</a></blockquote>
-				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<blockquote style="font-size:40px ;line-height: 1.5">#SomeoneTellMarineLePen African migrants aren't invading us, and here's the data to prove it</blockquote>
 			</section>			
 			
 			<section>
@@ -281,7 +279,7 @@
 				<p style="color:#ff7f00">Datenvisualisierung als Brücke zwischen Wissenschaft, Politik und Öffentlichkeit!?</p>
 			</section>
 			
-			<section data-background="images/deutschland-wanderung-2010.jpg">
+			<section data-background="images/deutschland-wanderung-2010.jpg" data-background-size="contain">
 				<br><br><br><br><br><br>
 				<p style="text-align:center">Binnenwanderung in Deutschland <br> im Jahr 2010 <a href="http://www.nikolasander.com/nettowanderung-deutschland/" target="_blank"><font color="white">(Link)</font></a></p>
 				<br>
